--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ local.properties
 
 # Log/OS Files
 *.log
+.DS_Store
+**/.DS_Store
+**/**/.DS_Store
 
 # Android Studio generated files and folders
 captures/
