--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,8 @@ fabric.properties
 
 ### AndroidStudio Patch ###
 !/gradle/wrapper/gradle-wrapper.jar
+
+# ios
+iosApp.xcodeproj/project.xcworkspace/xcuserdata/
+iosApp/iosApp.xcodeproj/xcuserdata/
+iosApp.xcodeproj/xcuserdata/
